--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
         <a href="#">LINK 2</a>
         <a href="#">LINK 3</a>
         <a href="#">LINK 4</a>
-        <a href="#">LINK 4</a>
+        <a href="#">LINK 5</a>
     </div>
+    <div id="content"> 
     <h1>MY PORTFOLIO IS THE BEST!!!!!!!!!!!!!</h1>
+    </div>
+
 </body>
 </html>
