--- a/index.html
+++ b/index.html
@@ -17,7 +17,46 @@
         <a href="#">LINK 5</a>
     </div>
     <div id="content"> 
-    <h1>MY PORTFOLIO IS THE BEST!!!!!!!!!!!!!</h1>
+        <div class="titles">
+            <h1>MY PORTFOLIO IS THE BEST!!!!!!!!!!!!!</h1>
+            <h2>da best portfolio</h2>
+        </div>
+
+    <section id="gallery">
+        <div class="column">
+            <img src="https://placehold.co/900x600" alt="">
+            <img src="https://placehold.co/300x900" alt="">
+            <img src="https://placehold.co/400x600" alt="">
+            <img src="https://placehold.co/900x400" alt="">
+            <img src="https://placehold.co/300x700" alt="">
+            <img src="https://placehold.co/400x400" alt="">
+            <img src="https://placehold.co/900x600" alt="">
+        </div>
+        <div class="column">
+            <img src="https://placehold.co/900x400" alt="">
+            <img src="https://placehold.co/300x700" alt="">
+            <img src="https://placehold.co/400x400" alt="">
+            <img src="https://placehold.co/900x600" alt="">
+            <img src="https://placehold.co/600x400" alt="">
+            <img src="https://placehold.co/300x900" alt="">
+        </div>
+        <div class="column">
+            <img src="https://placehold.co/300x900" alt="">
+            <img src="https://placehold.co/400x600" alt="">
+            <img src="https://placehold.co/900x600" alt="">
+            <img src="https://placehold.co/900x600" alt="">
+            <img src="https://placehold.co/300x700" alt="">
+            <img src="https://placehold.co/400x400" alt="">
+        </div>
+        <div class="column">
+            <img src="https://placehold.co/400x400" alt="">
+            <img src="https://placehold.co/900x600" alt="">
+            <img src="https://placehold.co/600x400" alt="">
+            <img src="https://placehold.co/300x900" alt="">
+            <img src="https://placehold.co/900x400" alt="">
+            <img src="https://placehold.co/300x700" alt="">
+        </div>
+    </section>
     </div>
 
 </body>
